--- a/view/index.html
+++ b/view/index.html
@@ -47,11 +47,11 @@
             //     var newval = '';
             //     val = val.replace(/\s/g, '');
             //     for (var i = 0; i < val.length; i++) {
-            //         if (i % 4 == 0 && i > 0) newval = newval.concat(' ');
+            //         if (i % 4 == 0 && i > 0) newval = newval.concat('-');
             //         newval = newval.concat(val[i]);
             //     }
             //     $(this).val(newval);
-            // })
+            //})
 
             // var obj = $("#inputTextCreditCardNumber").val();
             // var indexCount = obj.length - 1;
